app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
 *= require _bootstrap
 */

:root {
  --background-color: none;

  --full-vertical-height: 100vh;
  --full-horizontal-width: 100vw;

  --fluid-container-padding: var(--bs-gutter-x, 0.75rem);

  --default-opacity: 0.83;

  --min-width: 300px;

  --main-container-width: clamp(var(--min-width), 100%, 100%);
  --hrz-list-height: clamp(50px, 100px, 150px);
  --cat-list-width:  clamp(250px, 400px, 400px);
  --cat-list-height: clamp(100px, 400px, 400px);

  --item-text-font-size: 12px;
  --list-item-margin: 10px;

  --resc-prev-size: 100px;
  --list-item-border: 3px;

  --cat-item-height: 55px;
  /* making sure the margin of the item itself and the border are correctly calculated */
  --cat-item-width: calc(var(--cat-list-width) - calc(var(--list-item-margin) * 2) - calc(var(--list-item-border) * 2));

  --section-padding: 15px;
  --hrz-list-padding: 0px 20px 0px 20px;

  --cat-inf-padding: 15px;
}


body {
  background-image: asset-url("daylight-environment-forest-459225.jpg");
  background-size: cover;

  background-blend-mode: darken;
  background-position: center;
}

.container-fluid {
  //overflow-y: scroll;
}

input {
  margin-bottom: 5px !important;
}

#heading2 h2,
#heading h1 {
  text-align: left;
  color: #001f3f;
  background-color: white;
  padding: 5px;
}

#heading h1 {
  font-size: xxx-large;
  font-weight: bolder;
}

#heading,
#heading2 {
  height: fit-content;
  width: fit-content;
  margin-bottom: var(--section-padding);
}

.gray-boxing {
  border-style: solid;
  border-color: var(--bs-gray-dark);
  border-width: var(--list-item-border);
  background-color: var(--bs-gray);
}

#content-wrap {
  min-height: 100vh;
  padding-bottom: 0; /*höhe des Footers wenn der Webseiteninhalt das Fenster nicht ausfüllt*/
}

/*lightmode settings*/
.light {
  color: black;

  /*header*/
  .header-background-lightmode{
    background-color: #EFEFEF !important;
  }

  .header-text-lightmode{
    color: #212529 !important;
    font-weight: bold;
  }

  .header-text-lightmode:hover{
    color: cadetblue !important;
  }

  #welcome-no-hover:hover{
    color: #212529 !important;
  }

  /*footer*/
  .footer-inner-content{
    color: #212529 !important;
    background-color: #EFEFEF !important;
  }

  .footer-link-pointer a{
    color: #212529;
  }

  .footer-link-pointer{
    color: #EFEFEF;
  }

  .footer-link-pointer:hover {
    color: #212529;
  }

  .footer-link-pointer a:visited {
    color: coral;
  }

  /*rooms*/
  .rooms-inner-content{
    color: #212529 !important;
    background-color: white !important;
  }

  .rooms-link-pointer a{
    color: #212529;
  }

  .rooms-link-pointer{
    color: #EFEFEF;
  }

  .rooms-link-pointer:hover {
    color: #212529;
  }

  .rooms-link-pointer a:visited {
    color: #212529;
  }

  #Home_Body{
    background-color: #EFEFEF;
  }
}

/*darkmode settings*/
.dark {
  color: white;
  background-color: black;

  .whiteboard{
    color: white;
    background-color: black;
  }

  .rooms-inner-content{
    background-color: black !important;
  }
}

